--- a/src/css/Witness.css
+++ b/src/css/Witness.css
@@ -4,52 +4,7 @@ div.witness {
     width: 100%;
     height: 1100px;
     background: linear-gradient(180deg, rgba(226, 236, 248, 0) 25.24%, #E2ECF8 100%);
-}
-div.witness-container-header div.witness-carrousel{
-    width: 281px;
-    height: auto;
-    position: absolute;
-    top: 136px;
-    left: 579px;
 } 
-
-div.witness-carrousel div.carrousel-rankings {
-    position: relative;
-    display: block;
-    width: 281px;
-    height: 306px; 
-}
-
-div.witness-carrousel div.carrousel-rankings div.ranking-image {
-    width: 281px;
-    height: 282px;
-    display: block;
-    background-image: url(../assets/PicsArt_10-20-09.06.png);
-    background-repeat: none;
-}
-
-div.witness-carrousel div.carrousel-rankings div.ranking-dots {
-    width: 40px;
-    height: 8px;
-    display: flex;
-    justify-content: space-between; 
-    position: absolute;
-    bottom: 0px;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-div.witness-carrousel div.ranking-dots div.dot {
-    width: 8px;
-    height: 8px;
-    border: 1px solid #96ACBC;
-    border-radius: 50%;
-    background-color: transparent;
-}
-
-div.witness-carrousel div.ranking-dots div.dot.selected {
-    background-color: #96ACBC;
-}
 
 div.witness-container-body {
     width: 100%;
@@ -142,4 +97,11 @@ ul.witness-list li p {
     font-weight: 400;
     line-height: 24px;
     font-size: 16px;
+}
+
+
+div.witness-carrousel {
+    position: absolute;
+    left: 579px;
+    top: 136px;
 }
