--- a/src/css/Layout.css
+++ b/src/css/Layout.css
@@ -3,9 +3,8 @@ div.layout-wrapper {
 }
 
 div.main-container {
-    position: relative; 
-    width: 100%;
-    max-width: 1440px;
+    position: relative;  
+    min-width: 1440px;
     height: auto;
     margin: 0 auto; 
     background-color: var(--white); 
