--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -13,6 +13,8 @@ nav.navbar .navbar-container {
     flex-flow: row nowrap;
     justify-content: space-between;
     align-items: center;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 
 img.navbar-logo {
