--- a/src/css/AreYouReady.css
+++ b/src/css/AreYouReady.css
@@ -1,10 +1,12 @@
 div.are-you-ready {
-    width: 1440px;
     height: 622px;
+    position: relative;
 }
 
 div.are-you-ready-container {
     padding: 100px 120px;
+    width: 1440px;
+    margin: 0 auto;
 }
 
 div.cards {
