--- a/src/css/ContentsEntries.css
+++ b/src/css/ContentsEntries.css
@@ -1,8 +1,15 @@
 
-div.contents-entries-container {
+
+div.contents-entries {
     width: 100%;
-    height: 100%;
+    height: auto;
+}
+
+div.contents-entries-container {
+    max-width: 1440px;
+    width: 100%;
     padding: 100px 120px;
+    margin: 0 auto;
 }
 
 div.contents-entries-container-header h2.subtitle {
