--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,20 +1,27 @@
 footer {
     width: 100%;
     height: 291px;
-    margin: 0 auto 180px auto;
-    border-top: 1px solid var(--gray);
-    background-color: rgb(255, 255, 255);
-    padding: 0 32px;
+    margin: 0 auto 180px auto; 
+    background-color: rgb(255, 255, 255); 
 }
 
 .footer-container {
     width: 100%;
-    max-width: 1376px;
+    max-width: 1440px;
+    padding: 0 32px;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
     position: relative;
     top: 122px;
+    margin: 0 auto;
+}
+
+footer hr {
+    width: 1376px;
+    border: 1px solid var(--gray);
+    height: 1px; 
+    margin: 0 auto;
 }
 
 .footer-enarm-logo {
@@ -99,6 +106,10 @@ footer {
     color: var(--gray);
 }
 
+.footer-social-media .vectors img{
+    transition: all 350ms;
+}
+
 .button-inscription {
     display: block;
     width: 216px;
@@ -109,4 +120,9 @@ footer {
     font-weight: 700;
     text-align: center;
     line-height: 48px;
+}
+
+div.footer-social-media .vectors:hover img {
+    transform: scale(1.3);
+    transition: all 350ms;
 }
