--- a/src/css/Hero3.css
+++ b/src/css/Hero3.css
@@ -1,24 +1,27 @@
 div.hero-3 {
-    width: 1440px;
     height: 803.5px;
+    margin: 0 auto;
+    position: relative;
 }
 
 div.hero-3-container {
     width: 100%;
+    min-width: 1440px;
     height: 100%;
     position: relative;
+    margin: 0 auto;
 }
 
 div.hero-3-container div.bg-image {
-    background-image: url('../assets/imgs/Dres/ymlp.png');  
+    background-image: url(http://localhost:3000/static/media/ymlp.818eb08b9838cd36f59d.png);
     background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
     left: 158px;
-    width: 1282px;
+    width: 100%;
     height: 836px;
     background-position-x: 64px;
-    background-position-y: -11px;
+    background-position-y: -33px;
 }
 
 div.hero-3-container div.gradient {
@@ -26,7 +29,7 @@ div.hero-3-container div.gradient {
     width: 100%;
     height: 100%;
     position: absolute;
-    z-index: 20; 
+    z-index: 20;
 }
 
 div.hero-3-container div.triangle {
@@ -35,7 +38,8 @@ div.hero-3-container div.triangle {
     height: 100%;
     position: absolute;
     z-index: 20;
-    clip-path: polygon(100% 51%, 0% 100%, 100% 100%);
+    clip-path: polygon(100% 46%, 0% 100%, 100% 100%);
+    bottom: 0px;
 }
 div.hero-3-container div.sub-container {  
     position: absolute;
@@ -88,36 +92,45 @@ div.hero-3-container div.sub-container button.rounded-blue {
     border: 1px solid transparent;
     border-radius: 26px;  
     margin-bottom: 40px;
+    cursor: pointer;
 } 
 
-div.hero-3-container div.sub-container button.only-letters {
-    width: 267.12px;
+div.hero-3-container button.only-letters { 
     height: 22px;
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     background-color: transparent;
     border: none;
     cursor: pointer;
 }
 
-div.hero-3-container div.sub-container button.only-letters i {
+div.hero-3-container button.only-letters i {
     width: 28px;
     font-size: 36px;
-    color: var(--sky-blue);
+    color: var(--sky-blue);position: relative;
+    left: 0px;
+    transition: left 350ms;
 }
 
-div.hero-3-container div.sub-container button.only-letters span {
+div.hero-3-container button.only-letters span {
     font-family: Montserrat;
     font-style: normal;
     font-weight: 800;
     font-size: 18px;
     line-height: 22px;
     letter-spacing: 0.02em;
-    text-decoration-line: underline;
     color: #05B2FA;
     display: block;
-    width: 243px;
     height: 22px;
+}
+
+div.hero-3-container button.only-letters:hover span {
+    text-decoration-line: underline;    
+}
+
+div.hero-3-container button.only-letters:hover i {
+    left: 10px;
+    transition: left 350ms;
 }
