--- a/src/css/Hero4.css
+++ b/src/css/Hero4.css
@@ -1,20 +1,18 @@
 div.hero-4 {
-    width: 1440px;
+    width: 100%;
     height: 1070px;
     background: linear-gradient(180deg, rgba(226, 236, 248, 0) 25.24%, #E2ECF8 100%);
 }
 
 div.hero-4-container { 
-    width: 100%;
+    width: 1440px;
     height: 100%;
-    padding-left: 120px;
-    padding-right: 120px;
-    padding-top: 118px;
-    padding-bottom: 100px;
+    padding: 118px 120px 100px 120px; 
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin: 0 auto;
 }
 
 div.hero-4-container-header {
@@ -92,10 +90,16 @@ div.entries div.entry div.entry-image {
     width: 100%;
     height: 274px;
     margin-bottom: 20px;
+    overflow: hidden;
 }
 
-div.entry-image {
-    width: 100%;
+div.entries div.entry:hover { cursor: pointer; }
+div.entries div.entry:hover div.entry-image img {      
+	transition: all 0.3s;
+}
+div.entries div.entry:hover div.entry-image img {  
+    transform: scale(1.2);
+	transition: all 0.3s;
 }
 
 div.entries div.entry p.gray-date {
@@ -120,4 +124,17 @@ div.entries div.entry p.parraf {
     line-height: 34px;
 
     color: #000000;
+}
+
+div.hero-4 .reveal-load{
+    position: relative;
+    transform: translateY(150px);
+    opacity: 0;
+    transition: 950ms all ease;
+    z-index: 10001;
+}
+  
+div.hero-4 .reveal-load.active{
+    transform: translateY(0);
+    opacity: 1;
 }
