--- a/src/css/Hero7.css
+++ b/src/css/Hero7.css
@@ -1,14 +1,16 @@
 div.hero-7 {
-    width: 1440px;
+    width: 100%;
     height: 799px;
     background: linear-gradient(180deg, rgba(226, 236, 248, 0) 25.24%, #E2ECF8 100%);
 }
 
 div.hero-7-container {
     padding: 100px 120px;
+    width: 1440px;
     display: flex;
     flex-flow: row nowrap;
     justify-content: space-between;
+    margin: 0 auto;
 }
 
 div.hero-7-container div.subcontainer {
