--- a/src/css/Process.css
+++ b/src/css/Process.css
@@ -1,7 +1,9 @@
 div.process {
-    width: 1440px;
+    max-width: 1440px;
+    width: 100%;
     height: 534.5px;
     position: relative;
+    margin: 0 auto;
 }
 
 div.process-container {
@@ -11,6 +13,7 @@ div.process-container {
     left: 135px;
     top: -110.5px;
     z-index: 500;
+
 }
 
 div.process-container-header {
