--- a/src/css/Promises.css
+++ b/src/css/Promises.css
@@ -1,25 +1,32 @@
 div.promises {
-    width: 1440px;
+    width: 100%;
     height: 480px;
     position: relative;    
 }
 
 div.promises-container {
-    width: 100%;
+    width: 1440px;
     height: 100%;
-    padding-right: 120px;
+    margin: 0 auto;
 }
 
 div.promises-container-body {
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
 }
 
 div.promises-container-body div.image-container {
     width: 708px;
     height: 480px;
+    background: linear-gradient(270deg, #fff 16.85%, rgba(255, 255, 255, 0) 51.24%);
+    position: relative;
+}
+
+div.promises-container-body div.image-container img {
+    position: absolute;
+    z-index: -1;
 }
 
 div.promises-subcontainer {
@@ -27,6 +34,7 @@ div.promises-subcontainer {
     height: 278px;
     display: block; 
     text-align: start;
+    margin-left: 24px;
 }
 
 div.promises-subcontainer h1.title {
@@ -76,7 +84,7 @@ div.promises-subcontainer button {
     height: 22px;
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     background-color: transparent;
     border: none;
@@ -86,7 +94,9 @@ div.promises-subcontainer button {
 div.promises-subcontainer button i {
     width: 28px;
     font-size: 36px;
-    color: var(--sky-blue);
+    color: var(--sky-blue);position: relative;
+    left: 0px;
+    transition: left 350ms;
 }
 
 div.promises-subcontainer button span {
@@ -96,9 +106,16 @@ div.promises-subcontainer button span {
     font-size: 18px;
     line-height: 22px;
     letter-spacing: 0.02em;
-    text-decoration-line: underline;
     color: #05B2FA;
     display: block;
-    width: 232px;
     height: 22px;
+}
+
+div.promises-subcontainer button:hover span {
+    text-decoration-line: underline;    
+}
+
+div.promises-subcontainer button:hover i {
+    left: 10px;
+    transition: left 350ms;
 }
