--- a/src/css/Stats.css
+++ b/src/css/Stats.css
@@ -1,12 +1,12 @@
 div.stats {
-    width: 1440px;
+    width: 100%;
     height: 840px;
 }
 
 div.stats-container {
-    width: 100%;
-    height: 100%;
+    width: 1440px;
     padding: 100px 120px;
+    margin: 0 auto;
 }
 
 div.stats-items-container {
@@ -61,9 +61,11 @@ div.stat div.stat-circle div.small-circle {
     left: 92px;
     top: -10px;
     border-radius: 50%;
+    transform: rotate(0deg);
+    transition: transform 2.5s;
 }
 
-div.stat div.stat-circle span {
+div.stat span.stat-number {
     font-family: Raleway;
     font-style: normal;
     font-weight: 400;
@@ -76,8 +78,8 @@ div.stat div.stat-circle span {
     position: absolute;
     z-index: 120;
     left: 50%;
-    top: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    top: 79px;
+    transform: translateX(-50%);
 }
 
 .mb-96 {
@@ -93,7 +95,11 @@ div.stat span.stat-name {
     display: flex;
     align-items: center;
     text-align: center;
-    text-transform: uppercase;
-
+    text-transform: uppercase;    
     color: #606060;
+}
+
+.spin-around {
+    transform: rotate(360deg);
+    transition: transform 2.5s;
 }
