--- a/src/css/ValueProposal.css
+++ b/src/css/ValueProposal.css
@@ -1,6 +1,5 @@
 div.value_proposal {
-    width: 100%;
-    max-width: 1440px;
+    width: 100%; 
     height: 394px;
     background-color: #1E73BE;
 }
@@ -10,6 +9,8 @@ div.value_proposal-container {
     flex-flow: row nowrap;
     justify-content: space-evenly; 
     padding: 100px 120px;
+    width: 1440px;
+    margin: 0 auto;
 }
 
 div.value_proposal-item {
