--- a/src/css/homepage/Explore.css
+++ b/src/css/homepage/Explore.css
@@ -1,6 +1,5 @@
 div.explore {
-    width: 100%;
-    /* height: 796.5px; */
+    width: 100%; 
     display: block;
     position: relative; 
     background-color: var(--blue);
@@ -12,6 +11,7 @@ div.explore-container {
     display: block;
     padding: 0 120px;
     margin: 0 auto;
+    max-width: 1440px;
 } 
 
 div.explore-container-body {
