--- a/src/css/blog_entries/Hero4.css
+++ b/src/css/blog_entries/Hero4.css
@@ -1,7 +1,7 @@
 div.hero-4 { width: 100%; background: linear-gradient(180deg, rgba(226, 236, 248, 0) 25.24%, #E2ECF8 100%); }
 div.hero-4-container { position: relative; display: flex; }
 div.entries { display: flex; }
-div.entries div.entry { border: 2px solid #05B2FA; border-radius: 10px; background-color: #FFFFFF; height: 100%; }
+div.entries div.entry { border: 2px solid #05B2FA; border-radius: 10px; background-color: #FFFFFF; height: 100%; text-decoration: none; color: #000; }
 div.entries div.entry div.entry-image { width: 100%; height: 61%; overflow: hidden; }
 div.entries div.entry div.entry-image img { width: 100%; }
 div.entries div.entry div.entry-text { padding: 20px; }
